// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`omitEmpty > should remove empty from array 1`] = `
[
  1,
  2,
  3,
  4,
  {
    "a": 1,
    "b": 2,
    "g": {
      "a": 1,
    },
  },
  [
    1,
    2,
    3,
    4,
    {
      "a": 1,
    },
  ],
]
`;

exports[`omitEmpty > should remove empty from object 1`] = `
{
  "a": 1,
  "b": 2,
  "g": {
    "a": 1,
  },
  "h": [
    1,
    2,
    3,
    4,
    {
      "a": 1,
    },
    [
      1,
      2,
      3,
      4,
      {
        "a": 1,
      },
    ],
  ],
}
`;
